# PatXmlParser

./: CMakeLists.txt  CMakeSettings.json  README.md  config.ini
inifile2/: CMakeLists.txt  inifile.cpp  inifile.h
pugixml/: CMakeLists.txt
src/: CMakeLists.txt  XmlParser.cpp  XmlParser.h  ts.c
